main - adding suborbital track to deployment

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" type="image/png" href="img/icon.png?5"/>
 </head>
-<script type="module" src="https://astro.irdev.us/modules/index.mjs"></script>
+<script type="module" src="modules/index.mjs"></script>
 <body><div
         id="mainCanvasDiv" class="canvasDiv"></div><div
         id="cameraDiv" class="divButton cameraDiv"></div><div
