--- a/src/main/webapp/suborbital-track.html
+++ b/src/main/webapp/suborbital-track.html
@@ -8,10 +8,7 @@
     <link rel="icon" type="image/png" href="img/tab-icon.png?v=2" />
     <link rel="stylesheet" href="suborbital-track.css" />
 </head>
-<body><div id="title" style="text-align:left; font-size:24px;">Suborbital Track</div><div id="render-container"><div id="render-canvas-div"></div></div><div style="font-size:12px;height:34px; margin-top:2px;margin-bottom:2px;vertical-align:middle;">
-</div>
-<div id="footer">
-    <a href="https://github.com/InboundResearch/SuborbitalTrack" style="float:right;font-size:14px;text-decoration:none;color:white;">... on GitHub</a>
+<body><div id="render-container"><div id="render-canvas-div"></div></div><div style="font-size:12px;height:34px; margin-top:2px;margin-bottom:2px;vertical-align:middle;">
 </div>
 </body>
 <script type="module" src="modules/suborbital-track-index.mjs"></script>
