--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
 </head>
-<script type="module" src="modules/index.mjs"></script>
+<script type="module" src="modules/astro-index.mjs"></script>
 <body><div style="display: inline-block; width: 49%; height: 400px; position: relative;"><div
         id="mainCanvasDiv" class="canvasDiv"></div><div
         id="cameraDiv" class="divButton cameraDiv"></div><div
