--- a/src/main/webapp/suborbital-track.html
+++ b/src/main/webapp/suborbital-track.html
@@ -5,7 +5,7 @@
     <title>Suborbital Track</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/tab-icon.png?v=2" />
+    <link rel="icon" type="image/png" href="img/icon.png?5"/>
     <link rel="stylesheet" href="suborbital-track.css" />
 </head>
 <body><div id="render-container"><div id="render-canvas-div"></div></div><div style="font-size:12px;height:34px; margin-top:2px;margin-bottom:2px;vertical-align:middle;">
