--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,6 @@
         id="cameraDiv" class="divButton cameraDiv"></div><div
         id="fpsDiv" class="fpsDiv"></div><div
         id="buttonBarDiv" class="buttonBar"></div><div
-        id="loadingDiv" class="loadingDiv"><span style="margin-top: 25%;text-align: center;">...Please Stand By...</span></div><!--
+        id="loadingDiv" class="loadingDiv"><span style="margin-top: 25%;text-align: center;">...Please Stand By...</span></div>
 </body>
 </html>
